fix(scss): fix footer social icon alignment within circle

--- a/css/style.css
+++ b/css/style.css
@@ -2511,7 +2511,7 @@ header {
   .sign-in:hover {
     color: #EF4442; }
 
-/* 
+/*
 form{
   display:block;
   margin:20px;
@@ -2876,7 +2876,7 @@ ul {
   float: left;
   height: 40px;
   width: 40px;
-  padding-top: 0.8em;
+  padding-top: 0.7em;
   padding-right: 0.2em;
   text-align: center;
   margin-left: 1rem;
